feat: add swagger doc for update method
